fix: hide overflow on IE 11

--- a/app/component/itinerary.scss
+++ b/app/component/itinerary.scss
@@ -254,6 +254,7 @@ div.itinerary-main > div > .row:nth-child(1)  {
     .itinerary-transit-leg-route {
       @extend .itinerary-leg-text-gray;
       margin-top: 1px;
+      overflow: hidden;
     }
 
     .itinerary-leg-action {
